Index.html committed successfully

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<h1>Hello, Git!!!!</h1>
+<h1>Hello, Git!!!</h1>
 
 <p>This is a simple HTML file to demonstrate basic Git commands, which includes init,status,log,add and commit.</p>
 
