--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <p>This is a simple HTML file to demonstrate basic Git commands, which includes init,status,log,add and commit.</p>
 
+<a href="about.html">About Git</a>
+
+<a href="newFeature.html">New Feature</a>
 </body>
 
 </html>
